@@ -1,11 +1,11 @@
 package fun.gatsby.commons.schedule;
 
 
-import cn.hutool.core.util.RandomUtil;
 import lombok.extern.slf4j.Slf4j;
 
+import java.util.Arrays;
+import java.util.LinkedList;
 import java.util.List;
-import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.LinkedBlockingQueue;
@@ -15,6 +15,8 @@ import java.util.concurrent.LinkedBlockingQueue;
  * @author Gatsby
  * @see <img src="https://img-blog.csdnimg.cn/883009304fb942b2b20a14d14d85c9fd.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAaGFvaGFvX2Rpbmc=,size_20,color_FFFFFF,t_70,g_se,x_16">
  */
+
+//TODO 将taskGroupList改造为collection
 @Slf4j
 public class Scheduler {
 
@@ -31,67 +33,59 @@ public class Scheduler {
      */
     private final int nThrends;
     /**
-     * 任务信息数组
+     * 还在队列外等待执行的任务
      */
-    private final List<TaskGroup> taskGroups;
+    private final LinkedList<Runnable> tasks;
+
     /**
      * 队列的容量
      */
     int queueSize;
-    /**
-     * 执行模式：
-     * 1：所有任务信息都执行,一个任务执行完成后，接着执行下一个任务，知道全部完成
-     * 2：每次随机取一个任务组的任务开始
-     */
-    private int mode;
 
     private volatile boolean cancelled = false;
 
     /**
      * 构造器
      *
-     * @param TaskGroups 任务数组
-     * @param nThrends   同时执行任务中的任务线程数
-     * @param queueSize  任务执行队列
-     * @param mode       执行模式 1：所有任务信息都执行 2：先执行部分任务，执行完后再执行其他任务
+     * @param nThrends  同时执行任务中的任务线程数
+     * @param queueSize 任务执行队列
      */
-    public Scheduler(int nThrends, int queueSize, int mode, List<TaskGroup> TaskGroups) {
-        this.taskGroups = new CopyOnWriteArrayList<>(TaskGroups);
+    public Scheduler(int nThrends, int queueSize, List<Runnable> tasks) {
+        this.tasks = new LinkedList<>(tasks);
         this.nThrends = nThrends;
         this.queueSize = queueSize;
         this.loopExecutor = Executors.newFixedThreadPool(this.nThrends);
-        this.mode = mode;
         this.blockingTaskQueue = new LinkedBlockingQueue<>(queueSize);
     }
 
-    public Scheduler(int nThrends, int mode, List<TaskGroup> TaskGroups) {
-        this(nThrends, 2 << 7, mode, TaskGroups);
+    public Scheduler(int nThrends, List<Runnable> tasks) {
+        this(nThrends, 2 << 7, tasks);
     }
 
-    public Scheduler(int nThrends, List<TaskGroup> TaskGroups) {
-        this(nThrends, 1, TaskGroups);
-    }
-
-    public Scheduler(int nThrends, TaskGroup... TaskGroups) {
-        this(nThrends, 1, List.of(TaskGroups));
+    public Scheduler(int nThrends, Runnable... tasks) {
+        this(nThrends, 1, new LinkedList<>(Arrays.asList(tasks)));
     }
 
     public int getnThrends() {
         return nThrends;
     }
 
-    public void setCancelled(boolean cancelled) {
-        this.cancelled = cancelled;
+    /**
+     * 立即取消所有任务
+     */
+    public void cancel() {
+        this.cancelled = true;
     }
 
     /**
      * 执行方法
      */
     public void run() {
+
         putTaskToQueueAsync();
         takeAndExecuteSync();
 
-        //停止线程池,在队列中的任务全部执行完毕后，才会停止线程池，该方法不会阻塞f
+        //停止线程池,在队列中的任务全部执行完毕后，才会停止线程池，该方法不会阻塞
         if (!cancelled)
             loopExecutor.shutdown();
         else
@@ -113,21 +107,22 @@ public class Scheduler {
     private void takeAndExecuteSync() {
         while (!cancelled) {
             // 所有执行任务都放入队列后，退出
-            if (this.taskGroups.size() == 0) {
-                if (this.blockingTaskQueue.size() == 0) {
+            if (this.tasks.isEmpty()) {
+                if (this.blockingTaskQueue.isEmpty()) {
                     return;
                 }
             }
-            // 获取一个执行任务
-            Runnable task;
+            // 获取一个执行任务,并执行
             try {
-                task = this.blockingTaskQueue.take();
+                if (blockingTaskQueue.isEmpty()) {
+                    Thread.yield();
+                    continue;
+                }
+                var task = this.blockingTaskQueue.take();
+                this.loopExecutor.execute(task);
             } catch (InterruptedException e) {
                 throw new RuntimeException(e);
             }
-
-            final Runnable finalTask = task;
-            this.loopExecutor.execute(finalTask);
         }
     }
 
@@ -137,36 +132,18 @@ public class Scheduler {
     private void putTaskToQueueAsync() {
         new Thread(() -> {
             while (!cancelled) {
-                // 任务信息数组数量
-                int length = this.taskGroups.size();
-                // 执行完结束线程
-                if (length == 0) {
-                    return;
-                }
                 // 获取添加执行任务的的任务索引值
-                int index = getIndexByMode();
-                TaskGroup taskGroupT = this.taskGroups.get(index);
-                if (taskGroupT.size() > 0) {
-                    try {
-                        this.blockingTaskQueue.put(taskGroupT.pollFirst());
-                    } catch (InterruptedException e) {
-                        log.error("向执行任务队列放入任务异常", e);
-                        throw new RuntimeException(e);
+                try {
+                    Runnable task = tasks.poll();
+                    if (task == null) {
+                        return;
                     }
-                } else {
-                    this.taskGroups.remove(index);
+                    this.blockingTaskQueue.put(task);
+                } catch (InterruptedException e) {
+                    log.error("向执行任务队列放入任务异常", e);
+                    throw new RuntimeException(e);
                 }
             }
         }).start();
-    }
-
-    /**
-     * @return 任务信息索引值
-     */
-    private int getIndexByMode() {
-        if (this.mode == 2) {
-            return RandomUtil.randomInt(0, taskGroups.size());
-        }
-        return 0;
     }
 }
